# Dart_basics

dart_basics/: README.md  pubspec.yaml
dart_basics/lib/: dart_2.dart  main.dart
flutter_projects/clean_architechture/: README.md  pubspec.yaml
flutter_projects/clean_architechture/web/: index.html
flutter_projects/flutter_10/: pubspec.yaml
flutter_projects/flutter_10/lib/: main.dart  (+1 more)
flutter_projects/flutter_11/: pubspec.yaml
flutter_projects/flutter_16/: pubspec.yaml
flutter_projects/flutter_17/: README.md  pubspec.yaml
flutter_projects/flutter_18_3/: README.md  pubspec.yaml
flutter_projects/flutter_19_1/: README.md  pubspec.yaml
flutter_projects/flutter_19_1/android/app/: CMakeLists.txt  build.gradle
flutter_projects/flutter_19_1/android/app/src/main/: AndroidManifest.xml
flutter_projects/flutter_19_1/android/app/src/main/kotlin/com/example/flutter_19_1/: MainActivity.kt
flutter_projects/flutter_20/: README.md  pubspec.yaml
flutter_projects/flutter_21/: pubspec.yaml
flutter_projects/flutter_21_2/: README.md  pubspec.yaml
flutter_projects/flutter_21_3/: README.md  pubspec.yaml
flutter_projects/flutter_3/: pubspec.yaml
flutter_projects/flutter_5/: pubspec.yaml
flutter_projects/flutter_7/: pubspec.yaml
flutter_projects/flutter_8/: pubspec.yaml
flutter_projects/flutter_8_with_dart/: pubspec.yaml
flutter_projects/flutter_9/: pubspec.yaml
flutter_projects/flutter_application_1/: pubspec.yaml
flutter_projects/flutter_bloc/: pubspec.yaml
flutter_projects/flutter_video/: pubspec.yaml
flutter_projects/news_app/: pubspec.yaml
(+209 files in other folders)
